# Hybrid-Feature-Extractor

./: .gitignore  CMakeLists.txt  config.yaml  start_docker.sh
arivo_superpoint/: logger.h  logging.h  super_point.cpp  super_point.hpp  test_airvo_sp.cpp
docker/: UNO_x86.dockerfile  makefile
model/: readme.md  superpoint_v1_sim_int32_150_300.trt  trt_engine_generate.sh
superpoint_extractor/: CMakeLists.txt
superpoint_extractor/inc/: CudaNMS.hpp  SuperPoint.hpp
superpoint_extractor/src/: CUDA_NMS.cu  SuperPoint.cpp  test_superpoint.cpp
